# parseinc

./: .envrc  .gitignore  README.md  build.nix  flake.nix  hercules-ci.nix  parseinc.cabal  pkgs.nix  pre-commit.nix  settings.nix
benchmark/: Main.hs
benchmark/Benchmark/: IParser.hs
src/: IParser.hs
test/: Main.hs
test/Test/: IParser.hs
