cabal-version:   3.4
name:            parseinc
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
build-type:      Simple
extra-doc-files: CHANGELOG.md

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-kind-signatures -Wno-missed-specialisations
    -Wno-all-missed-specialisations -Wno-missing-role-annotations

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:           common-language
  exposed-modules:  IParser
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base     ^>=4.21
    , deepseq

test-suite parseinc-test
  import:           common-language
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  other-modules:    Test.IParser
  default-language: Haskell2010
  build-depends:
    , base        ^>=4.21
    , hspec       >=2.7
    , parseinc
    , QuickCheck  >=2.14

benchmark parseinc-bench
  import:           common-language
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   benchmark
  other-modules:    Benchmark.IParser
  default-language: Haskell2010
  build-depends:
    , base       ^>=4.21
    , criterion  >=1.5
    , deepseq    >=1.4
    , parseinc
